--- a/src/cssStyle/styleSheet.css
+++ b/src/cssStyle/styleSheet.css
@@ -49,3 +49,6 @@
 .background{
     background: url(https://preview.colorlib.com/theme/onedu/assets/img/hero/hero-shape.jpg);
 }
+.buttonCart:hover{
+    background-color: red;
+}
