--- a/src/cssStyle/styleSheet.css
+++ b/src/cssStyle/styleSheet.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost&family=Orbitron:wght@600&display=swap');
 
 .navbarStyle {
     font-family: 'Crimson Text', serif;
@@ -55,4 +56,11 @@
 .cardMain{
     position: sticky;
     top: 0;
+}
+.lessonsStyle:hover{
+    background-color: rgba(106, 111, 115, 0.43);
+}
+.stil{
+    font-family: 'Orbitron', sans-serif;
+
 }
